--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ rsconnect
 # .travis.yml
 LICENSE
 
+thesis.log
+packages.bib
+
 # ignore intermidiate figure files
 figures/*.png
 figures/*.log
@@ -20,3 +23,6 @@ figures/*/*.synctex.gz
 figures/*/*/*.png
 figures/*/*/*.log
 figures/*/*/*.synctex.gz
+
+# ignore text_sources folder
+text_sources
