--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 .Rproj.user
 .Rhistory
 .RData
-_publish.R
 _book
+_publish.R
 _bookdown_files
 rsconnect
+
+docs
 
 # ignore for the moment
 # .travis.yml
