--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,11 @@ cache:
   directories:
     - $TRAVIS_BUILD_DIR/_bookdown_files
 
+before_install:
+  - curl -L https://github.com/holgern/travis-texlive/releases/download/2017-07-05_09/texlive.tar.xz | tar -JxC ~
+install:
+  - PATH=$HOME/texlive/bin/x86_64-linux:$PATH
+
 before_script:
   - chmod +x ./_build.sh
   - chmod +x ./_deploy.sh
