--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,31 @@ language: r
 cache: packages
 pandoc_version: 1.19.2.1
 
+sudo: true
+cache:
+  - packages
+  - /tmp/texlive
+  - /$HOME/.texlive
+warnings_are_errors: false
+
+
+before_install:
+  - source ./source/texlive.sh
+  - tlmgr install acronym bigfoot blindtext chngcntr cmap nowidow mdframed navigator needspace tablefootnote tocloft xpatch
+  - tlmgr update --all
+  - sudo apt-get update
+  - sudo apt-get install texlive-bibtex-extra
+  - Rscript -e "if (!requireNamespace('knitr')) install.packages('knitr')"
+
+install: echo Installation step #do not remove this line!
+
 before_script:
+  # as somehow no biber package is available for ubuntu 12.04 via apt, let's just download it directly
+  # - wget "http://downloads.sourceforge.net/project/biblatex-biber/biblatex-biber/0.9.9/binaries/Linux/biber-linux_x86_64.tar.gz"
+  - wget "https://sourceforge.net/projects/biblatex-biber/files/biblatex-biber/current/binaries/Linux/biber-linux_x86_64.tar.gz"
+  - tar xzf biber-linux_x86_64.tar.gz
+  - export PATH=$PATH:$PWD
+  - tlmgr update biber
   - chmod +x ./_build.sh
   - chmod +x ./_deploy.sh
 
